--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tuningtron"
-version = "0.0.25"
+version = "0.0.26"
 authors = [
   { name="Vladimir Petrukhin", email="man4j@ya.ru" },
 ]
@@ -23,7 +23,8 @@ dependencies = [
   "peft>=0.14.0",
   "deepspeed==0.16.1",
   "sentencepiece>=0.2.0",
-  "trl>=0.12.2"
+  "trl>=0.12.2",
+  "bitsandbytes>=0.45.0"
 ]
 
 [project.urls]
