--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tuningtron"
-version = "0.0.42"
+version = "0.0.44"
 authors = [
   { name="Vladimir Petrukhin", email="man4j@ya.ru" },
 ]
@@ -18,13 +18,13 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  "transformers>=4.46.3",
-  "datasets>=3.2.0",
-  "peft>=0.14.0",
-  "deepspeed==0.15.4",
-  "sentencepiece>=0.2.0",
-  "trl>=0.12.2",
-  "bitsandbytes>=0.45.0",
+  "transformers>=4.56.0",
+  "datasets>=4.0.0",
+  "peft>=0.17.1",
+  "deepspeed==0.17.5",
+  "sentencepiece>=0.2.1",
+  "trl>=0.22.1",
+  "liger-kernel>=0.6.2"
 ]
 
 [project.urls]
